[package]
name = "discord-logger"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"
repository = "https://github.com/Tsuuko/discord-logger"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
